--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      href="./src/assets/calendar-with-checklist-date-schedule-3d-icon.jpg"
+      type="image/png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task management app</title>
     <!-- Font -->
